components/radix-platform/radix-app-ingresses-2/charts/namespace.api.yaml
kind: Namespace
apiVersion: v1
metadata:
  name:   radix-api-${RADIX_APP_ENV:=tba}
