components/radix-platform/radix-app-ingresses-2/charts/namespace.canary.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: radix-canary-golang-${RADIX_APP_ENV:=tba}
