components/radix-platform/radix-app-ingresses-2/charts/namespace.cost-api.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: radix-cost-allocation-api-${RADIX_APP_ENV:=tba}
