components/radix-platform/radix-app-ingresses-2/charts/namespace.webhook.yaml
kind: Namespace
apiVersion: v1
metadata:
  name:  radix-github-webhook-${RADIX_APP_ENV:=tba}
