components/radix-platform/radix-app-ingresses-2/charts/ingress.public-site.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
  labels:
    radix-app: radix-public-site
    radix-component: public-site
  name: public-site-at.custom-domain
  namespace: radix-public-site-${RADIX_APP_ENV:=tba}
spec:
  ingressClassName: nginx
  rules:
    - host: "${AZ_RESOURCE_DNS:=tba}"
      http:
        paths:
          - backend:
              service:
                name: public-site
                port:
                  number: 8080
            path: /
            pathType: Prefix
    - host: "www.${AZ_RESOURCE_DNS:=tba}"
      http:
        paths:
          - backend:
              service:
                name: public-site
                port:
                  number: 8080
            path: /
            pathType: Prefix
    - host: "www.${clusterName:=tba}.${AZ_RESOURCE_DNS:=tba}"
      http:
        paths:
          - backend:
              service:
                name: public-site
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - "${AZ_RESOURCE_DNS:=tba}"
        - "www.${AZ_RESOURCE_DNS:=tba}"
        - "www.${clusterName:=tba}.${AZ_RESOURCE_DNS:=tba}"
      secretName: radix-wildcard-tls-cert
